@@ -28,6 +28,7 @@
 	NX-1438 (Increase debug level for thread pool messages)
 	NX-1453 (Windows installer option to disable database upgrade)
 	NX-1455 (Zone UIN in NXSL function CreateNode)
+	NX-1456 (DCI values aggregated on cluster may be incorrect on first few polls after server startup)
 
 
 *
